Fix to select the main camera on mobile

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,6 @@ body {
     display: none;
 }
 
-.output {
+/* .output {
     display: none;
-}
+} */
